Updating the running script.