@@ -2,7 +2,10 @@
 
 JAR_FILE='/home/daniel/projects/GSGP-GD/gsgp-gd.jar'
 INSTANCE_PATHS=(
-    '/home/daniel/.gsgp-gd/experiments/scripts/bestGDDimSel/' 
+    '/home/daniel/.gsgp-gd/experiments/scripts/gsgpDimSel10/'
+    '/home/daniel/.gsgp-gd/experiments/scripts/gsgpDimSel05/'
+    '/home/daniel/.gsgp-gd/experiments/scripts/gsgpDimSel025/'
+    '/home/daniel/.gsgp-gd/experiments/scripts/gsgpDimSel01/'
 ) 
 
 for p in ${INSTANCE_PATHS[*]}; do
@@ -10,7 +13,7 @@ for p in ${INSTANCE_PATHS[*]}; do
     for c in $configs; do
         if [[ -f $c ]]; then
             echo java -jar $JAR_FILE -p $c
-            java -Xmx13G -XX:PermSize=256m -XX:MaxPermSize=512m -jar $JAR_FILE -p $c
+            java -Xmx16G -jar $JAR_FILE -p $c
         fi
     done
 done
